--- a/css/modules/elements-buttons.less
+++ b/css/modules/elements-buttons.less
@@ -115,6 +115,7 @@ button.btn-meta {
 	background: none;
 	border-width: 0px;
 	text-transform: lowercase;
+	z-index: inherit;
 }
 
 button.btn-meta-float {
