--- a/css/modules/layout.less
+++ b/css/modules/layout.less
@@ -79,6 +79,7 @@ body {
 
 .game-opacity-controller {
 	.opacity-transition-reset();
+	overflow: hidden;
 }
 
 div.grid-content {
